# linux-labs

./: .gitignore  CMakeLists.txt
lab1/gdb/: Makefile  test_multi_process.cpp  test_multi_thread.cpp
lab1/gtest/: CAdder.cpp  CAdder.h  CAdderTester.cpp  Makefile  main.cpp
lab1/make/: Adder.cpp  CAdder.cpp  CAdder.h
lab1/valgrind/: Makefile  memory_test.cpp
lab1/vim/: A.hpp  cscope.in.out  cscope.out  cscope.po.out  test.cpp
lab2/: CMakeLists.txt
lab2/v1/: A.hpp  test1.cpp
lab2/v2/: A.hpp  SerializerForAs.hpp  test2.cpp
lab2/v3/: A.hpp  B.hpp  Serialized.hpp  Serializer.hpp  test3.cpp
lab2/v4/: Serializable.hpp  test4.cpp
lab2/v5/: CLSerializer.hpp  config.txt  test5.cpp
lab3/: CMakeLists.txt
lab3/hw1/: CMakeLists.txt  client.cpp  server.cpp
lab3/hw2/: CMakeLists.txt  client.cpp  server.cpp
lab3/hw3/: CMakeLists.txt  client.cpp  server.cpp
lab3/hw4/: CMakeLists.txt  client.cpp  server.cpp
lab3/hw5/: CMakeLists.txt  client.cpp  server.cpp
lab4/hw1/: CMakeLists.txt  function.cpp  main.cpp
lab4/hw2/: CMakeLists.txt  function1.cpp  function2.cpp  main.cpp
lab4/hw3/: CMakeLists.txt  CPluginController.cpp  CPluginController.hpp  CPluginEnumerator.cpp  CPluginEnumerator.hpp  function1.cpp  function2.cpp  main.cpp
lab4/hw4/: CMakeLists.txt  CPluginController.cpp  CPluginController.hpp  IPrintPlugin.cpp  IPrintPlugin.hpp  function1.cpp  function2.cpp
